Sun Nov 11 2001  Vitezslav Samel <samel@mail.cz>
	* regex.c, regex.h: change regex pointer to be 'unsigned char *regex'
	This kills some warnings during build.

Sun Nov 11 2001  Vitezslav Samel <samel@mail.cz>
	* cmd.c, menu.c, menu.h, rc.c, tab.c, ufile.c: use mkmenu(W *, ...)
	instead of mkmenu(BASE *, ...).
	This kills some warnings during build.

Sun Nov 11 2001  Vitezslav Samel <samel@mail.cz>
	* tw.c, w.h: non-code clean up

Sun Nov 11 2001  Vitezslav Samel <samel@mail.cz>
	* macro.c, qw.c, qw.h, tw.c, uedit.c, uisrch.c, usearch.c, ushell.c:
	use mkqw(W *, ...) instead of mkqw(BASE *, ...) (same applies to
	mkqwna() and mkqwnsr()).
	This kills a lot of warnings during build.

Sun Nov 11 2001  Vitezslav Samel <samel@mail.cz>
	* bw.c, cmd.c, macro.c, main.c, rc.c, tab.c, tw.c, ublock.c, uedit.c,
	uerror.c, ufile.c, umath.c, undo.c, usearch.c, ushell.c, utag.c, w.c,
	w.h: use msgnw[t](W *, char *) instead of msgnw[t](BASE *, char *).
	This kills a lot of warnings during build.

Sun Nov 11 2001  Vitezslav Samel <samel@mail.cz>
	* b.c, blocks.c, blocks.h, scrn.c, termcap.c, undo.c, vfile.c, vs.c:
	use mfwrd() and mbkwd() only as internal functions to mmove().
	This kills some of the remaining warnings during build.

Wed Nov 07 2001  Vitezslav Samel <samel@mail.cz>
	*** Release joe-2.9.7 ***

Wed Nov 07 2001  Vitezslav Samel <samel@mail.cz>
	* configure.ac: bump up version number

Wed Nov 07 2001  Vitezslav Samel <samel@mail.cz>
	* NEWS: update - prepare for release

Wed Nov 07 2001  Vitezslav Samel <samel@mail.cz>
	* Makefile.am, deleted conf.c: conf.c not used anymore

Wed Nov 07 2001 Vitezslav Samel <samel@mail.cz>
	* Makefile.am: add README.cvs and docs/help-system.html
	to EXTRA_DIST variable

Wed Nov 07 2001  Marek 'Marx' Grac <xgrac@fi.muni.cz>
	* docs/help-system.html: updated

Tue Nov 06 2001  Vitezslav Samel <samel@mail.cz>
	* new file README.cvs: documentation file on how to access joe sources
	via CVS

Sun Nov 04 2001  Vitezslav Samel <samel@mail.cz>